--- a/themes/hugo-theme-learn/layouts/partials/header.html
+++ b/themes/hugo-theme-learn/layouts/partials/header.html
@@ -41,7 +41,7 @@
     </style>
     {{ partial "custom-header.html" . }}
   </head>
-  <body data-url="{{ .RelPermalink }}">
+  <body class="" data-url="{{ .RelPermalink }}">
     {{ partial "menu.html" . }}
         <section id="body">
         <div id="overlay"></div>
