--- a/themes/hugo-theme-learn/static/css/theme.css
+++ b/themes/hugo-theme-learn/static/css/theme.css
@@ -34,10 +34,6 @@
     font-weight: 500;
     src: url("../fonts/Work_Sans_500.eot?#iefix") format("embedded-opentype"), url("../fonts/Work_Sans_500.woff") format("woff"), url("../fonts/Work_Sans_500.woff2") format("woff2"), url("../fonts/Work_Sans_500.svg#WorkSans") format("svg"), url("../fonts/Work_Sans_500.ttf") format("truetype");
 }
-body {
-    background: #fff;
-    color: #777;
-}
 body #chapter h1 {
     font-size: 3.5rem;
 }
@@ -63,7 +59,6 @@ pre {
 }
 .bg {
     background: #fff;
-    border: 1px solid #eaeaea;
 }
 b, strong, label, th {
     font-weight: 600;
@@ -243,8 +238,8 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
 #sidebar ul.searched .search-match a:hover {
     color: white;
 }
-#sidebar ul.topics {
-    margin: 0 1rem;
+#sidebar ul.topics a {
+    padding: 0 1rem;
 }
 #sidebar ul.topics.searched ul {
     display: block;
@@ -266,6 +261,9 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
 #sidebar ul.topics > li > a b {
     opacity: 0.5;
     font-weight: normal;
+}
+#sidebar ul.topics > li.active > a b  {
+    margin-left: 1rem;
 }
 #sidebar ul.topics > li > a .fa {
     margin-top: 9px;
@@ -313,7 +311,6 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
     text-indent: 0.2rem;
 }
 #main {
-    background: #f7f7f7;
     margin: 0 0 1.563rem 0;
 }
 #body {
@@ -455,7 +452,6 @@ body {
 h2, h3, h4, h5, h6 {
     font-family: "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
     text-rendering: optimizeLegibility;
-    color: #5e5e5e;
     font-weight: 400;
     letter-spacing: -1px;
 }
@@ -463,7 +459,6 @@ h1 {
     font-family: "Novacento Sans Wide", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
     text-align: center;
     text-transform: uppercase;
-    color: #222;
     font-weight: 200;
 }
 blockquote {
@@ -641,6 +636,9 @@ code + .copy-to-clipboard {
     vertical-align: middle;
     height: 21px;
     top: 0;
+    background-color: #E8E2CD;
+    color: #ccc;
+    border-radius: 2px;
 }
 pre {
     padding: 1rem;
@@ -699,16 +697,13 @@ hr {
     background: inherit;
 }
 table {
-    border: 1px solid #eaeaea;
     table-layout: auto;
 }
 th {
-    background: #f7f7f7;
     padding: 0.5rem;
 }
 td {
     padding: 0.5rem;
-    border: 1px solid #eaeaea;
 }
 .bullets {
     margin: 1.7rem 0;
@@ -1038,25 +1033,25 @@ td {
     vertical-align: middle;
     position: relative;
     color: #5e5e5e;
-    background-color: #FFF7DD;
+    background-color: #E8E2CD;
     margin-left: -.2rem;
     cursor: pointer;
     border-radius: 0 2px 2px 0;
     margin-bottom: 1px;
 }
 .copy-to-clipboard:hover {
-    background-color: #E8E2CD;
+    background-color: #FD971F;
 }
 pre .copy-to-clipboard {
     position: absolute;
     right: 4px;
     top: 4px;
-    background-color: #C1C4C6;
+    background-color: #E8E2CD;
     color: #ccc;
     border-radius: 2px;
 }
 pre .copy-to-clipboard:hover {
-    background-color: #00bdf3;
+    background-color: #FD971F;
     color: #fff;
 }
 .parent-element {
